# agent-technical-book

./: .gitignore  README.md  idea.md  main.py  pyproject.toml
orchestrator/: analytics_agent.yaml  author_agent.yaml  consistency_agent.yaml  example_agent.yaml  marketing_agent.yaml  outline_agent.yaml  research_agent.yaml  reviewer_agent.yaml  root_agent.yaml  strategist_agent.yaml  technical_validator_agent.yaml
orchestrator/tools/: ddg_tools.py  file_tools.py
workspace/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md  preface.md  toc.md
