[project]
name = "agent-technical-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dataclasses>=0.8",
    "ddgs>=9.11.1",
    "google-adk>=1.26.0",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
]
